gcc/testsuite/rust/rustc/ui/issues/issue-18118.rs
pub fn main() {
    const z: &'static isize = {
        let p = 3;
        &p // { dg-error ".E0597." "" { target *-*-* } }
    };
}

